# ModernCppProjects

./: 1  CMakeLists.txt  Doxyfile  README.md  Shared_ptr.cc  Weak_ptr.cc  custum_memory_allocator.cc  m.cc  test_shared_ptr.cc
.github/workflows/: ci.yml
docs/html/: annotated.html  annotated_dup.js  class_shared_ptr-members.html  class_shared_ptr.html  classcus__allocate-members.html  classcus__allocate.html  classes.html  doxygen_crawl.html  index.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  classes_0.js  classes_1.js  pages_0.js  searchdata.js
docs/latex/: annotated.tex  class_shared_ptr.tex  classcus__allocate.tex  md__r_e_a_d_m_e.tex  refman.tex
src/: CMakeLists.txt
src/memory_management/: Shared_ptr.cc  String_impl.cc  operator_insertion_.cc  unique_ptr.cc
tests/: test_shared_ptr.cc
